--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -4,12 +4,79 @@
   	padding: 10px;
 }
 
-.control {
+.control-panel {
 	background-color: #2b4863;
 	margin: 0 auto;
 	padding-top: 50px;
   	padding-bottom: 50px;
   	text-align: center;
+}
+
+.control-part {
+	display: inline-block;
+	padding-left: 15px; 
+	padding-right: 15px; 
+}
+
+#new-array-button {
+	background-color: #9e9844;
+	border-color: white;
+	border-radius: 10px;
+	color: white;
+	font-family: monospace;
+	font-size: 16px;
+}
+
+#array-slider {
+	-webkit-appearance: none; 
+	height: 6px;
+}
+
+#array-slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%; 
+	background: #b8b044;
+	cursor: pointer;
+}
+
+#array-slider::-moz-range-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	background: #4CAF50;
+	cursor: pointer;
+}
+
+.toggle-button {
+	background-color: #2b4863;
+	border-color: white;
+	border-radius: 10px;
+	font-family: monospace;
+	font-size: 16px;
+}
+
+.toggle-button:hover {
+	background-color: #913c33 !important;
+	border-color: white;
+	border-radius: 10px;
+	font-family: monospace;
+	font-size: 16px;
+}
+
+.toggle-button.active {
+	background-color: #913c33 !important;
+	border-color: #913c33 !important;
+	border-radius: 10px;
+	font-family: monospace;
+	font-size: 16px;
+}
+
+#sort-button {
+	border-radius: 10px;
+	font-family: monospace;
+	font-size: 16px;
 }
 
 .display {
@@ -24,30 +91,3 @@
 	border-radius: 5px;
 }
 
-#new-array-button {
-	background-color: #9e9844;
-	border-color: white;
-	border-radius: 10px;
-	color: white;
-	font-family: monospace;
-	font-size: 16px;
-}
-
-.toggle-button {
-	background-color: #2b4863;
-	border-color: white;
-	border-radius: 10px;
-	font-family: monospace;
-	font-size: 16px;
-}
-
-#sort-button {
-	border-radius: 10px;
-	font-family: monospace;
-	font-size: 16px;
-}
-
-span {
-	padding-left: 15px; 
-	padding-right: 15px; 
-}
